--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,1 +1,27 @@
-<h1>Hairy Nemesis</h1>
+<!doctype html>
+<html>
+
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Hairy Nemisis</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+  </head>
+
+  <body>
+
+    <header>
+      {% include header.html %}
+    </header>
+
+    <section>
+      {{content}}
+    </section>
+
+    <footer>
+      {% include footer.html %}
+    </footer>
+    
+  </body>
+</html>
