Add beast images

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-  <h5 id="footer">Inspired by Daisy, Gus, and Tammy</h5>
+  <h5 id="footer">A mini-project built using GitHub Pages and Jekyll</h5>
 </footer>
