--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
   <section class="main_logo">
-    <img src="./images/hn_logo.png">
+    <img src="./images/hn-logo.png">
   </section>
 </header>
