--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -11,12 +11,14 @@
 
   <body>
     <section class="wrap">
-      <header>
+      <header class="main_logo">
         {% include header.html %}
       </header>
 
       <section class="main">
-        {{content}}
+        <div class="beast-wrap">
+          {{content}}
+        </div>
       </section>
     </section>
 
