WIP: fix spacing on header image

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <section class="wrap">
-      <header class="main_logo">
+      <header id="main_logo">
         {% include header.html %}
       </header>
 
