WIP: add media query for images - header graphic needs to be updated for smaller screen sizes

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -16,7 +16,7 @@
       </header>
 
       <section class="main">
-        <div class="beast-wrap">
+        <div id="beast-wrap">
           {{content}}
         </div>
       </section>
