--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -3,7 +3,6 @@ html, body {
   margin: 0 auto;
   position: relative;
   text-align: center;
-  width: 800px;
 }
 
 .wrap {
@@ -15,32 +14,41 @@ html, body {
   padding-bottom: 50px;}  /* must be same height as the footer -- sticky footer */
 }
 
-/*#main_logo {*/
-  /*margin: 0 auto;
-  padding: 50px 0 15px 0;
-  position: relative;
-  text-align: center;*/
-/*  margin: 50px;
+#main_logo {
+  /*margin: 0 auto;*/
+  margin-top: 30px;
+  /*padding: 50px 0 15px 0;*/
+  /*position: relative;*/
+  text-align: center;
 }
-*/
-.beast-wrap {
-  margin-top: 50px;
-  width: 800px;
+
+#beast-wrap {
+  height: 370px;
+  margin-top: 150px;
+  position: absolute;
+  width: 100%;
 }
 
 #beast_1 {
+  left: 10%;
+  position: absolute;
+  /*background-image: url('images/daisy_dark.png')*/
+}
+/*
+#beast_1:hover {
   position: absolute;
   left: -100px;
-}
+  background-image: url('images/daisy.png');
+}*/
 
 #beast_2 {
+  left: 38%;
   position: absolute;
-  left: 230px;
 }
 
 #beast_3 {
+  left: 65%;
   position: absolute;
-  right: -110px;
 }
 
 .footer {
@@ -55,3 +63,29 @@ html, body {
   text-transform: uppercase;
   letter-spacing: 4px
 }
+
+@media (max-width: 750px) { 
+
+  #beast-wrap {
+    margin-top: 0;
+  }
+
+  #beast_1 {
+    left: 1%;
+    margin-top: -25px;
+    position: relative;
+  }
+
+  #beast_2 {
+    left: 1%;
+    margin-top: -25px;
+    position: relative;
+  }
+
+  #beast_3 {
+    left: 1%;
+    margin-bottom: 20px;
+    margin-top: -25px;
+    position: relative;
+  }
+ }
