Update footer to include link to GH repo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-  <h5 id="footer">A mini-project built using GitHub Pages and Jekyll</h5>
+  <h5 id="footer">Want to see what's under the hair?<br>HN is on <a id="link" href="https://github.com/LouisaBarrett/hairy-nemesis/tree/gh-pages" title="HN on GitHub">GitHub</a></h5>
 </footer>
