--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -32,14 +32,7 @@ html, body {
 #beast_1 {
   left: 10%;
   position: absolute;
-  /*background-image: url('images/daisy_dark.png')*/
 }
-/*
-#beast_1:hover {
-  position: absolute;
-  left: -100px;
-  background-image: url('images/daisy.png');
-}*/
 
 #beast_2 {
   left: 38%;
@@ -65,32 +58,45 @@ html, body {
 }
 
 #link {
- /*text-decoration: none;*/
  color: #d3d3d3;
 }
 
 @media (max-width: 750px) { 
 
   #beast-wrap {
-    margin-top: 0;
+    height: 1030px;
+    margin: 0 0 20px 0;
   }
 
   #beast_1 {
-    left: 1%;
+    left: 0;
     margin-top: -25px;
     position: relative;
   }
 
   #beast_2 {
-    left: 1%;
+    left: 0;
     margin-top: -25px;
     position: relative;
   }
 
   #beast_3 {
-    left: 1%;
-    margin-bottom: 20px;
+    left: 0;
+    margin-bottom: 100px;
     margin-top: -25px;
     position: relative;
+  }
+
+  .footer {
+    clear:both;  /* sticky footer */
+    height: 50px; /* sticky footer */
+    margin-top: 50px; /* negative value of footer height sticky footer */
+    position: relative; /* sticky footer */
+    width: 100%;
+
+    color: #d3d3d3;
+    font-family: sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 3px
   }
  }
