Add text image replacement to header - header image changes out as page scales down

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<header>
-  <section class="main_logo">
-    <img src="./images/hn-logo.png">
+   <section class="main_logo">
+    <h1 class="header-image">
+      Hairy Nemesis
+    </h1>
   </section>
-</header>
