--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -11,13 +11,14 @@
 
   <body>
     <section class="wrap">
-      <header id="main_logo">
+      
+      <header>
         {% include header.html %}
       </header>
 
-        <div id="beast-wrap">
-          {{content}}
-        </div>
+      <div id="beast-wrap">
+        {{content}}
+      </div>
 
     </section>
 
