--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,12 +1,12 @@
 html, body {
-  height: 100%; /* sticky footer */
+  height: 100%;
   margin: 0 auto;
   position: relative;
   text-align: center;
 }
 
 .wrap {
-  min-height: 100%; /* sticky footer */
+  min-height: 100%;
 }
 
 .main_logo {
@@ -20,15 +20,15 @@ html, body {
 h1.header-image {
   background: url("../images/hn-logo.png");
   height: 100%;
-  left: 27%;
-  position: absolute;
+  margin: 0 auto;
+  position: relative;
   text-indent: -9999px;
   width: 800px; 
 }
 
 #beast-wrap {
   height: 370px;
-  margin-top: 150px;
+  margin: 150px auto;
   position: relative;
   width: 100%;
 }
@@ -38,35 +38,21 @@ h1.header-image {
   position: absolute;
 }
 
-/*#beast_1:hover {
-  background: url("../images/daisy_dark.png");
-}*/
-
 #beast_2 {
   left: 38%;
   position: absolute;
   z-index: 1;
 }
 
-/*#beast_2:hover {
-  background: url("../images/gus_dark.png");
-}*/
-
-
 #beast_3 {
   left: 65%;
   position: absolute;
 }
 
-/*#beast_3:hover {
-  background: url("../images/tammy_dark.png");
-}
-*/
-
 .footer {
-  clear: both;  /* sticky footer */
-  height: 50px; /* sticky footer */
-  margin-top: 50px; /* negative value of footer height sticky footer */
+  clear: both;
+  height: 50px;
+  margin-top: 50px;
   width: 100%;
 
   color: #d3d3d3;
@@ -84,7 +70,8 @@ h1.header-image {
 h1.header-image {
   background: url("../images/hn-logo-sm.png");
   height: 135px;
-  left: 37%;
+  margin: 0 auto;
+  position: relative;
   width: 135px; 
 }
 
